--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,9 @@ pillow==11.0.0
 platformdirs==4.3.6
 pooch==1.8.2
 proglog==0.1.10
+prompt_toolkit==3.0.48
 pycparser==2.22
+pydub==0.25.1
 requests==2.32.3
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -30,3 +32,4 @@ threadpoolctl==3.5.0
 tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==2.2.3
+wcwidth==0.2.13
